base/productcatalog/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: productcatalogservice
  namespace: productcatalogservice
spec:
  hosts:
    - productcatalogservice.productcatalogservice.svc.cluster.local
  http:
    - route:
        - destination:
            host: productcatalogservice.productcatalogservice.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: productcatalogservice.productcatalogservice.svc.cluster.local
            subset: v2
          weight: 10
